# wRPC-Core

./: .gitignore  README.rst
w-rpc-core/: Cargo.toml  LICENSE_MIT  README.md  build.rs
w-rpc-core/protos/: RPC_Module.proto  packager.proto  request.proto  result.proto
w-rpc-core/src/: lib.rs  utils.rs
w-rpc-core/src/js/: shim.js
w-rpc-core/src/protos/: RPC_Module.rs  init.rs  mod.rs  packager.rs  request.rs  result.rs  shim.js
w-rpc-core/tests/: web.rs
