[package]
name = "wRPC"
version = "0.1.0"
authors = ["Samuel Warfield <warfield@mymail.mines.edu>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/Warfields/wRPC-Core"
description = "RPC Framework for Webassembly"
license = "MIT and Apache License 2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
protobuf = { version = "2.8", features = ["with-bytes"] }
js-sys = "0.3"
lazy_static = "1.3"
cfg-if = "0.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[build-dependencies]
protoc-rust = "2.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true